MyFirstProject/src/objects/Mentor__c.object
<CustomObject>
    <description>Its main object</description>
    <fields>
        <fullName>M_Address__c</fullName>
        <label>M_Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Email__c</fullName>
        <label>M_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mentor_ID__c</fullName>
        <displayFormat>MID-{0000}</displayFormat>
        <label>Mentor_ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Mentor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mentor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>